--- a/.github/workflows/mass-app-deploy.yaml
+++ b/.github/workflows/mass-app-deploy.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Install Massdriver CLI
         uses: massdriver-cloud/actions/setup@v2.1
       - name: Build and Push - Azure
-        run: mass image push testrepo -a ${{ secrets.AUTHENTICATION_ARTIFACT_ID_AZURE }} -r westus -t ${{ steps.vars.outputs.sha_short }}
+        run: mass image push test/repo -a ${{ secrets.AUTHENTICATION_ARTIFACT_ID_AZURE }} -r westus -t ${{ steps.vars.outputs.sha_short }}
       # Deploy
       - name: Update Tag
         run: cat mass-app-params.json | sed s/IMAGE_TAG/${{ steps.vars.outputs.sha_short }}/ > mass-app-params-rendered.json
