--- a/.github/workflows/mass-app-params.json
+++ b/.github/workflows/mass-app-params.json
@@ -13,9 +13,8 @@
   "dns": {
     "enable_dns": false
   },
-  "docker": {
-    "image": "bloby",
-    "registry": "massdrivercloud",
+  "image": {
+    "repository": "massdrivercloud/bloby",
     "tag": "IMAGE_TAG"
   },
   "monitoring": {
