--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Publish Bundle 
         uses: massdriver-cloud/actions/bundle_publish@v3
         with:
-          build-directory: "./src"
+          build-directory: "./"
       - name: Set Image Version
         uses: massdriver-cloud/actions/app_patch@v3
         with:
